--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "0.1.0",
   "packageManager": "pnpm@8.6.12",
-  "description": "",
+  "description": "A universal bundler plugin for defining aliases when bundling packages.",
   "license": "MIT",
   "homepage": "https://github.com/wzc520pyfm/unplugin-alias#readme",
   "repository": {
